# komunna

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  create_files.sh  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  easypanel.json  text.txt
backend/: .env.example  Dockerfile  Dockerfile.dev  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
backend/src/: __init__.py  config.py  database.py  main.py
backend/src/api/: __init__.py
backend/src/api/v1/: __init__.py  router.py
backend/src/api/v1/endpoints/: __init__.py  auth.py  telegram_webhook.py
backend/src/core/: __init__.py  auth.py  auth_detector.py
backend/src/models/: __init__.py  base.py  community.py  community_admin.py  gamification.py  telegram_bot.py  telegram_group.py  user.py
backend/src/schemas/: __init__.py  bootstrap.py  telegram.py
backend/src/services/: __init__.py  dynamic_tables.py  telegram_auth.py  telegram_bot_service.py  telegram_factory.py
backend/src/shared/: __init__.py
bot/: .env.example  Dockerfile  Dockerfile.dev  pyproject.toml  requirements-dev.txt  requirements.txt
bot/src/: main.py
database/: init.sql
database/init/: 01-init.sql
docs/: API.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md
frontend/: .env.local.example  Dockerfile  Dockerfile.dev  next.config.js  package-lock.json  package.json
frontend/public/: .gitkeep  manifest.json
nginx/: nginx.conf
nginx/conf.d/: default.conf
scripts/: backup-db.sh  deploy.sh  restore-db.sh  setup.sh  wait-for-db.py
(+26 files in other folders)
